melhorias no template

--- a/template.yaml
+++ b/template.yaml
@@ -20,3 +20,7 @@ Resources:
           Properties:
             Schedule: cron(55 20 * * ? *) # executa todo dia às 10:15
             Name: dataops-agenda-coleta-vacina
+            Input: '{
+              "url":"https://s3-sa-east-1.amazonaws.com/ckan.saude.gov.br/PNI/vacina/uf/2021-09-03/uf%3DAC/part-00000-55f3db2e-ec9a-4125-9044-11b088159962.c000.csv", 
+              "uf":"ac"
+            }'
