deploy lambda jenkins

--- a/template.yaml
+++ b/template.yaml
@@ -24,3 +24,4 @@ Resources:
               "url":"https://s3.sa-east-1.amazonaws.com/ckan.saude.gov.br/SIPNI/COVID/uf/uf%3DAC/part-00000-ebb720ff-cda9-42f4-90a0-e4c8a15c22aa.c000.csv", 
               "uf":"ac"
             }' # evento com parâmetros que serão enviados para a função lambda
+            #  OBS: O Link abaixo é dinâmico. Pegue outro link de arquivo de vacinação aqui: https://opendatasus.saude.gov.br/dataset/covid-19-vacinacao/resource/5093679f-12c3-4d6b-b7bd-07694de54173
