--- a/template.yaml
+++ b/template.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: 'AWS::Serverless-2016-10-31'
-Description: A starter AWS Lambda function.
+Description: Coleta de dados.
 Resources:
   # Criar função lambda agendada
   lambdafunction:
